update paths